--- a/1/10/10n/10news.com.html
+++ b/1/10/10n/10news.com.html
@@ -1,16 +1,18 @@
-<!--The following is the downloaded HTML source of the 10news.com privacy policy that was archived on 2010-05-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100517203412id_/http%3A//www.10news.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 10news.com privacy policy that was archived on 2010-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100927214842id_/http%3A//www.10news.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Privacy</title>
-<link rel="canonical" href="http://www.10news.com/privacy/index.html"><link rel="sitecanonical" href="http://www.10news.com/privacy/index.html"><script src="/sh/flash/js/AC_OETags.js" id="AC_OETags.js" type="text/javascript"></script><meta name="description" content=""><meta name="keywords" content="">
+<link rel="canonical" href="http://www.10news.com/privacy/index.html"><link rel="sitecanonical" href="http://www.10news.com/privacy/index.html"><script src="/sh/flash/js/AC_OETags.js" id="AC_OETags.js" type="text/javascript"></script><meta name="sectionname" content="privacy">
+<meta name="topicname" content="station">
+<meta name="description" content=""><meta name="keywords" content="">
 <meta name="WT.cg_s" content="Privacy">
 <meta name="WT.cg_n" content="Station">
 <meta name="WT.ti" content="Privacy">
 <meta name="DCSext.mtype" content="index">
 <script type="text/javascript">
 IBSYS = window.IBSYS || {};
-IBSYS.originHost = 'www.10news.com';</script><script src="/adinf/script.js" type="text/javascript"></script><script type="text/javascript" src="/_public/js/sand-min.js"></script><link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
+IBSYS.originHost = 'www.10news.com';</script><script type="text/javascript" src="http://nexus.ensighten.com/IB/Bootstrap.js"></script><script src="/adinf/script.js" type="text/javascript"></script><script type="text/javascript" src="/_public/js/sand-min.js"></script><link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
 <script type="text/javascript" src="/javascript/script.js"></script>
 
 <!-- set ad zone  -->
@@ -22,13 +24,13 @@ rnd = rnd.getTime();
 </script>
 <script type="text/javascript">
 var pageProps= {
-time: {hr:"1",hr_p:"01",hr24:"13",hr24_p:"13",min:"34",sec:"14",mer:"pm",tz:"PDT",mon:"5",mon_p:"05",date:"17",date_p:"17",yr:"2010",day:"2"},
+time: {hr:"2",hr_p:"02",hr24:"14",hr24_p:"14",min:"44",sec:"15",mer:"pm",tz:"PDT",mon:"9",mon_p:"09",date:"27",date_p:"27",yr:"2010",day:"2"},
 envhost:"www.10news.com",
 sectionname:"Privacy",
 sectiontag:"station",
 sectionpath:"/privacy/"
 };
-var adZone = 'national';
+var adZone = 'local';
 
 IBSYS.application.Application.mergeConfig({
 
@@ -76,7 +78,7 @@ else {
 form.submit();
 }
 }
-</script><form name="IBSSearchForm" class="compactSearchForm" action="/search/form.html" onsubmit="return searchSubmit()"><input type="hidden" name="la" value="en"><input type="hidden" name="stories" value="on"><input type="hidden" name="video" value="on"><div class="small"></div><input type="hidden" name="client" value="pub-3452726740003125"><input type="hidden" name="forid" value="1"><input type="hidden" name="channel" value="7290152216"><input type="hidden" name="ie" value="ISO-8859-1"><input type="hidden" name="oe" value="ISO-8859-1"><input type="hidden" name="hl" value="en"><input type="hidden" name="cof" value="GALT:#000000;GL:1;DIV:#336699;VLC:000000;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:000000;GIMP:000000;FORID:11"><script type="text/javascript" src="http://www.10news.com/js/11064151/script.js"></script><div id="googlesearchbox"><div id="sitesponsor"></div><span class="searchoption"><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="10news.com" checked="" id="localsearch"><label for="localsearch" title="Search 10news.com"><small>Site</small></label></span><span class="searchoption"><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="" id="websearch"><label for="websearch" title="Search the Web"><small>Web</small></label></span><div id="yellowpages"><input type="hidden" name="mkt" value=""><input type="hidden" name="heading" value=""><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="" id="yellowpagessearch"><label for="yellowpagessearch" title="Search Yellow Pages"><small style="color: black;"><a id="yplink" href="http://yellowpages.10news.com/san-diego+ca.z.html">Yellow Pages</a></small></label></div><span class="searchoption" id="alistoption"><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="" id="alistsearch"><label for="alistsearch" title="Search A-List Businesses"><small><a id="alistlink" href="http://kgtv.cityvoter.com/alist">A-List Businesses</a></small></label></span><div id="googlesearchfield"><input type="text" name="qt" value="" size="15" class="small" id="searchtextbox">
+</script><form name="IBSSearchForm" class="compactSearchForm" action="/search/form.html"><input type="hidden" name="la" value="en"><input type="hidden" name="stories" value="on"><input type="hidden" name="video" value="on"><div class="small"></div><input type="hidden" name="client" value="pub-3452726740003125"><input type="hidden" name="forid" value="1"><input type="hidden" name="channel" value="7290152216"><input type="hidden" name="ie" value="ISO-8859-1"><input type="hidden" name="oe" value="ISO-8859-1"><input type="hidden" name="hl" value="en"><input type="hidden" name="cof" value="GALT:#000000;GL:1;DIV:#336699;VLC:000000;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:000000;GIMP:000000;FORID:11"><div id="googlesearchbox"><div id="sitesponsor"></div><span class="searchoption"><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="10news.com" checked="" id="localsearch"><label for="localsearch" title="Search 10news.com"><small>Site</small></label></span><span class="searchoption"><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="" id="websearch"><label for="websearch" title="Search the Web"><small>Web</small></label></span><div id="yellowpages"><input type="hidden" name="mkt" value=""><input type="hidden" name="heading" value=""><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="" id="yellowpagessearch"><label for="yellowpagessearch" title="Search Yellow Pages"><small style="color: black;"><a id="yplink" href="http://yellowpages.10news.com/san-diego+ca.z.html">Yellow Pages</a></small></label></div><span class="searchoption" id="alistoption"><input type="radio" onclick="toggleSearchType(this);" name="sitesearch" value="" id="alistsearch"><label for="alistsearch" title="Search A-List Businesses"><small><a id="alistlink" href="http://kgtv.cityvoter.com">A-List Businesses</a></small></label></span><div id="googlesearchfield"><input type="text" name="qt" value="" size="15" class="small" id="searchtextbox">
 &nbsp;<input id="googlesearchgo" type="image" src="/sh/images/sponsors/google/mcgraw_go.gif" alt="GO"></div><div id="poweredbygoogle"></div></div></form>
   
   
@@ -86,7 +88,7 @@ form.submit();
 </div>
 
 </div></div>
-    </div><!--Start Nav--><div class="navbars"><div class="navbar"><div class="navHdr MainNavHdr"><img src="/images/structures/tabs/MainNav.gif" alt="MainNav" title="MainNav" width="130" height="17" border="0"></div><div class="navMainSections MainNavBtns"><div class="navBtn"><a href="/">Home</a></div><div class="navBtn"><a href="/news/">San Diego News</a></div><div class="navBtn"><a href="/weather/">Weather</a></div><div class="navBtn"><a href="/traffic/">Traffic</a></div><div class="navBtn"><a href="/investigations/">Investigations</a></div><div class="navBtn"><a href="/entertainment/">Entertainment</a></div><div class="navBtn"><a href="/health/">Staying Healthy</a></div><div class="navBtn"><a href="/sports/">Sports</a></div><div class="navBtn"><a href="/politics/">Politics</a></div><div class="navBtn"><a href="/index.html#siteContents">Site Contents</a></div></div></div><div class="navbar"><div class="navHdr MarketplaceNavHdr"><img src="/images/structures/tabs/MarketplaceNav.gif" alt="MarketplaceNav" title="MarketplaceNav" width="130" height="17" border="0"></div><div class="navMainSections MarketplaceNavBtns"><div class="navBtn"><a href="/contests/">Contests</a></div><div class="navBtn"><a href="/houseandhome/">House And Home</a></div><div class="navBtn"><a href="/food/">Food</a></div><div class="navBtn"><a href="http://kgtv.cityvoter.com/">A-List City Guide</a></div><div class="navBtn"><a href="/dating/">Dating</a></div><div class="navBtn"><a href="/jobs/">San Diego Jobs</a></div><div class="navBtn"><a href="/realestate/">Real Estate</a></div><div class="navBtn"><a href="/automotive/">Automotive</a></div></div></div><div class="navbar"><div class="navHdr StationNavHdr"><img src="/images/structures/tabs/StationNav.gif" alt="StationNav" title="StationNav" width="130" height="17" border="0"></div><div class="navMainSections StationNavBtns"><div class="navBtn"><a href="/kgtv/">About</a></div><div class="navBtn"><a href="/advertise/">Advertise</a></div><div class="navBtn"><a href="/kgtv/178407/detail.html">Contact Us</a></div><div class="navBtn"><a href="http://www.aztecasd.com/">AZTECA AMERICA</a></div></div></div><div class="navbar"><div class="navHdr SitetoolsNavHdr"><img src="/images/structures/tabs/SitetoolsNav.gif" alt="SitetoolsNav" title="SitetoolsNav" width="130" height="17" border="0"></div><div class="navMainSections SitetoolsNavBtns"><div class="navBtn"><a href="/emailnewsletters/">Breaking News Alerts</a></div><div class="navBtn"><a href="/10newstogo/">10News For Phones</a></div><div class="navBtn"><a href="/rss/">RSS</a></div></div></div></div><!--End Nav--><div id="topleft" class="pageContainer">
+    </div><!--Start Nav--><div class="navbars"><div class="navbar"><div class="navHdr MainNavHdr"><img src="/images/structures/tabs/MainNav.gif" alt="MainNav" title="MainNav" width="130" height="17" border="0"></div><div class="navMainSections MainNavBtns"><div class="navBtn"><a href="/">Home</a></div><div class="navBtn"><a href="/news/">San Diego News</a></div><div class="navBtn"><a href="/weather/">Weather</a></div><div class="navBtn"><a href="/traffic/">Traffic</a></div><div class="navBtn"><a href="/investigations/">Investigations</a></div><div class="navBtn"><a href="/entertainment/">Entertainment</a></div><div class="navBtn"><a href="/health/">Staying Healthy</a></div><div class="navBtn"><a href="/sports/">Sports</a></div><div class="navBtn"><a href="/politics/">Politics</a></div><div class="navBtn"><a href="/index.html#siteContents">Site Contents</a></div></div></div><div class="navbar"><div class="navHdr MarketplaceNavHdr"><img src="/images/structures/tabs/MarketplaceNav.gif" alt="MarketplaceNav" title="MarketplaceNav" width="130" height="17" border="0"></div><div class="navMainSections MarketplaceNavBtns"><div class="navBtn"><a href="/atthemovies/">At The Movies</a></div><div class="navBtn"><a href="/contests/">Contests</a></div><div class="navBtn"><a href="/houseandhome/">House And Home</a></div><div class="navBtn"><a href="/food/">Food</a></div><div class="navBtn"><a href="http://kgtv.cityvoter.com/">A-List City Guide</a></div><div class="navBtn"><a href="/dating/">Dating</a></div><div class="navBtn"><a href="/jobs/">San Diego Jobs</a></div><div class="navBtn"><a href="/realestate/">Real Estate</a></div><div class="navBtn"><a href="/automotive/">Automotive</a></div></div></div><div class="navbar"><div class="navHdr StationNavHdr"><img src="/images/structures/tabs/StationNav.gif" alt="StationNav" title="StationNav" width="130" height="17" border="0"></div><div class="navMainSections StationNavBtns"><div class="navBtn"><a href="/kgtv/">About</a></div><div class="navBtn"><a href="/advertise/">Advertise</a></div><div class="navBtn"><a href="/kgtv/178407/detail.html">Contact Us</a></div><div class="navBtn"><a href="http://www.aztecasd.com/">AZTECA AMERICA</a></div></div></div><div class="navbar"><div class="navHdr SitetoolsNavHdr"><img src="/images/structures/tabs/SitetoolsNav.gif" alt="SitetoolsNav" title="SitetoolsNav" width="130" height="17" border="0"></div><div class="navMainSections SitetoolsNavBtns"><div class="navBtn"><a href="/emailnewsletters/">Breaking News Alerts</a></div><div class="navBtn"><a href="/10newstogo/">10News For Phones</a></div><div class="navBtn"><a href="/rss/">RSS</a></div></div></div></div><!--End Nav--><div id="topleft" class="pageContainer">
 	    
 
 	
@@ -328,12 +330,24 @@ if (typeof dcsTag == "function") {
 </noscript>
 
 <!--
-Time: 13:34:14 PDT
-Date: 5/17/2010
+Time: 14:44:15 PDT
+Date: 9/27/2010
 XSL File: index.xsl
 Browser Type: 
 Page Type: index
 Section Site: mcgr
 -->
-<span xmlns:esi="http://www.edge-delivery.org/esi/1.0"><!--Load Scripts--></span><script type="text/javascript"> _qoptions={ qacct:"p-41jrVeSPpekVU",
+<script type="text/javascript">
+document.write(unescape("%3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E"));
+</script><script src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript">
+COMSCORE.beacon({
+c1: 2,
+c2: 7507067,
+c3: "",
+c4: window.location.protocol+"//"+window.location.host+window.location.pathname,
+c5: "",
+c6: "",
+c15: ""
+});
+</script><noscript><img src="http://b.scorecardresearch.com/p?c1=2&c2=7507067&c3=&c4=&c5=&c6=&c15=&cj=1"></noscript><span xmlns:esi="http://www.edge-delivery.org/esi/1.0"><!--Load Scripts--></span><script type="text/javascript"> _qoptions={ qacct:"p-41jrVeSPpekVU",
 labels:"McGraw-Hill Television Stations" }; </script><script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script><noscript><a href="http://www.quantcast.com/p-41jrVeSPpekVU" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-41jrVeSPpekVU.gif?labels=McGraw-Hill%20Television%20Stations%20" style="display: none;" border="0" height="1" width="1" alt="Quantcast"></a></noscript><script src="/_public/js/ibLast.js" type="text/javascript"></script></body></html>
