--- a/m/ma/man/managingbipolardisorder.net.html
+++ b/m/ma/man/managingbipolardisorder.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the managingbipolardisorder.net privacy policy that was archived on 2010-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100626074039id_/http%3A//www.managingbipolardisorder.net/privacy.cgi%3Fconfig%3D6178) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the managingbipolardisorder.net privacy policy that was archived on 2010-09-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100928080629id_/http%3A//www.managingbipolardisorder.net/privacy.cgi%3Fconfig%3D6178) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy</title>
@@ -64,7 +64,7 @@ text-underline:double;
   <td colspan="2" align="left" valign="top"><p><strong>Active Date: July 31, 2009</strong></p>
    <p><strong>Previous Revisions: October 27, 2006; February 26, 2008; March 12, 2008; June 26, 2008</strong><strong></strong></p>
    <p align="center" style="text-align:left;"><strong>Privacy Policy / Your California Privacy Rights</strong></p>
-   <p>Web Clients, LLC (“Company,” “we” or “us”) reserves the right to revise this Privacy Policy at any time simply by posting such revision, so we encourage you to review it periodically. In order to track any changes to this Privacy Policy, we will include a historical reference at the top of this document.</p>
+   <p>USA Interactive, Inc. (“Company,” “we” or “us”) reserves the right to revise this Privacy Policy at any time simply by posting such revision, so we encourage you to review it periodically. In order to track any changes to this Privacy Policy, we will include a historical reference at the top of this document.</p>
    <p>This Privacy Policy will tell you, among other things:</p>
    <ul>
     <li><u><span style="color:blue; "><a href="#link1">Your California privacy rights.</a></span></u></li>
@@ -158,7 +158,7 @@ text-underline:double;
    
    <p style="page-break-after:avoid;"><strong>Request for More Information</strong></p>
    <p style="page-break-after:avoid;"></p>
-   <p>As it relates to marketing communications or any other questions you might have about our Privacy Policy, <u><span style="color:blue; "><a href="javascript:;" onclick="window.open(' http://www.managingbipolardisorder.net/contact.cgi?config=6178&amp;email=&amp;email;','','scrollbars=yes,width=600,height=402')">click here to contact us</a></span></u> or write to us at WebClients, LLC. PO Box 654, Camp Hill, PA 17001.<strong></strong></p>
+   <p>As it relates to marketing communications or any other questions you might have about our Privacy Policy, <u><span style="color:blue; "><a href="javascript:;" onclick="window.open(' http://www.managingbipolardisorder.net/contact.cgi?config=6178&amp;email=&amp;email;','','scrollbars=yes,width=600,height=402')">click here to contact us</a></span></u> or write to us at 2207 Concord Pike PMB 530, Wilmington, DE 19803.<strong></strong></p>
    
    <p><strong>WHAT HAPPENS IF I HIT A LINK TO ANOTHER SITE FROM A COMPANY WEBSITE?</strong></p>
    
