--- a/t/te/tee/teengirls.com.html
+++ b/t/te/tee/teengirls.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the teengirls.com privacy policy that was archived on 2010-04-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100406001453id_/http%3A//www.customerhelponline.com/l/privacy.html%3Fsite%3Dteengirls) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teengirls.com privacy policy that was archived on 2010-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100930001636id_/http%3A//www.customerhelponline.com/l/privacy.html%3Fsite%3Dteengirls) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,10 +24,14 @@ body { background: #FFF; }
         <img src="cimages/teengirls.gif" alt="Terms of Service" border="0" style="margin:auto;">
         <h3 style="margin: 0;padding: 0;font-size: 12px;font-weight: bold;text-align: center;">Privacy Policy Statement</h3>
   </div>
-<p>This website (the "Site") is operated by Protranstech BV</p>
+<p>This website (the "Site") is operated by Minaloun Management Ltd</p>
 <p>
-          Protranstech BV<br>
-      Postbus 218<br>            Ijmudien<br>            Netherlands<br>      1970AE<br>    </p>
+        </p><div style="display: inline-block;">
+           <div style="float: left; margin-right: 50px;">
+      Minaloun Management Ltd<br>
+      Agias Fylaxeos &amp; Zinonos Rossidi<br>      2, 1st Floor<br>      Limassol<br>            Cyprus<br>      3082<br>      </div>
+         </div>
+    <p></p>
 <p>We can be reached via e-mail at <a href="mailto:privacy@customerhelponline.com">privacy@customerhelponline.com</a></p>
 <p>This Privacy Policy Statement sets forth the policies and  practices with respect to information or data gathered regarding subscribers  and members of this Site. This is an adult Site that expressly and strictly  limits its membership to adults. All persons under the age of 18 are strictly  prohibited from accessing or viewing the contents of this Site.</p>
 <p>This Site does not knowingly seek or collect any personal  information or data from persons under the age of 18.</p>
