--- a/i/iw/iwa/iwascoding.com.html
+++ b/i/iw/iwa/iwascoding.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iwascoding.com privacy policy that was archived on 2010-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100602083804id_/http%3A//www.iwascoding.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iwascoding.com privacy policy that was archived on 2010-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100930061834id_/http%3A//www.iwascoding.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head xmlns="">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -97,10 +97,10 @@
 		
 	</div>
 <div id="Main"><div xmlns="" id="BoxNavigationRight">
-<div class="Box-blackMainPage"><a href="http://www.iwascoding.com/GarageSale/index.html" class="ApplicationButton" style="background: url(http://www.iwascoding.com/Images/Box-GarageSaleIcon.png) no-repeat 10px 4px;"><span class="Box-ApplicationName"><strong>GarageSale</strong><br>The eBay tool for Mac OS X</span></a></div>
 <div class="Box-blackMainPage">
-<a href="http://www.iwascoding.com/GarageSaleTouch/index.html" class="ApplicationButton" style="background: url(http://www.iwascoding.com/Images/Box-GarageSaleTouchIcon.png) no-repeat 10px 4px;"><span class="Box-ApplicationName"><strong>GarageSale touch</strong><br>The eBay App for iPhone/iPod touch</span></a><div class="New-Label"></div>
+<a href="http://www.iwascoding.com/GarageSale/index.html" class="ApplicationButton" style="background: url(http://www.iwascoding.com/Images/Box-GarageSaleIcon.png) no-repeat 10px 4px;"><span class="Box-ApplicationName"><strong>GarageSale</strong><br>The eBay tool for Mac OS X</span></a><div class="New-Label"></div>
 </div>
+<div class="Box-blackMainPage"><a href="http://www.iwascoding.com/GarageSaleTouch/index.html" class="ApplicationButton" style="background: url(http://www.iwascoding.com/Images/Box-GarageSaleTouchIcon.png) no-repeat 10px 4px;"><span class="Box-ApplicationName"><strong>GarageSale touch</strong><br>The eBay App for iPhone/iPod touch</span></a></div>
 <div class="Box-blackMainPage">
 <a href="http://www.iwascoding.com/GarageSaleTouch/index.html" class="ApplicationButton" style="background: url(http://www.iwascoding.com/Images/Box-GarageSaleTouchIcon.png) no-repeat 10px 4px;"><span class="Box-ApplicationName"><strong>GarageSale HD</strong><br>The eBay App for the iPad</span></a><div class="New-Label"></div>
 </div>
@@ -181,4 +181,4 @@ unsolicited e-mail or other types of mailings.
 		
 	</div>
 <div class="clearFloat"> &nbsp;</div></div></div>
-</body></html>
+<div id="fancy_overlay"></div><div id="fancy_wrap"><div class="fancy_loading" id="fancy_loading"><div></div></div><div id="fancy_outer"><div id="fancy_inner"><div id="fancy_close"></div><div id="fancy_bg"><div class="fancy_bg fancy_bg_n"></div><div class="fancy_bg fancy_bg_ne"></div><div class="fancy_bg fancy_bg_e"></div><div class="fancy_bg fancy_bg_se"></div><div class="fancy_bg fancy_bg_s"></div><div class="fancy_bg fancy_bg_sw"></div><div class="fancy_bg fancy_bg_w"></div><div class="fancy_bg fancy_bg_nw"></div></div><a href="javascript:;" id="fancy_left"><span class="fancy_ico" id="fancy_left_ico"></span></a><a href="javascript:;" id="fancy_right"><span class="fancy_ico" id="fancy_right_ico"></span></a><div id="fancy_content"></div><div id="fancy_title"><table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td class="fancy_title" id="fancy_title_left"></td><td class="fancy_title" id="fancy_title_main"><div></div></td><td class="fancy_title" id="fancy_title_right"></td></tr></tbody></table></div></div></div></div></body></html>
