--- a/a/ad/adt/adtextimagecreator.com.html
+++ b/a/ad/adt/adtextimagecreator.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adtextimagecreator.com privacy policy that was archived on 2010-03-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100302063509id_/http%3A//khancepts.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adtextimagecreator.com privacy policy that was archived on 2010-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100930072137id_/http%3A//khancepts.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -143,7 +143,15 @@ All Rights Reserved - Privacy | <a href="http://khancepts.com/terms.html">Terms<
 
 </div>
 
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-11784175-2");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 
