--- a/f/fr/fre/freecodesource.com.html
+++ b/f/fr/fre/freecodesource.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freecodesource.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621044053id_/http%3A//freecodesource.com/site/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freecodesource.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220112350id_/http%3A//freecodesource.com/site/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="/new/theme/js/jquery-1.3.2-release/dist/jquery.min.js"></script>
 <script src="/new/theme/js/effects.js"></script>
 <script src="/new/theme/js/main.js"></script>
-<script src="http://cdn.gigya.com/wildfire/js/wfapiv2.js"></script>
+<!--<script src="http://cdn.gigya.com/wildfire/js/wfapiv2.js"></script>-->
 <script src="/theme/mootools-1.2.4-core-yc.js" type="text/javascript"></script>
 <script src="/theme/mootools-1.2.4.4-more.js" type="text/javascript"></script>
 <script src="/theme/favorities.js" type="text/javascript"></script>
@@ -461,10 +461,10 @@ function googleTranslateElementInit() {
 <div class="footer-container">
 © 2005-2012 FreeCodeSource.com<br>
 We are in no way affiliated with Myspace.com, Facebook.com, Google.com, Tumblr.com, Twitter.com, Blogger.com, Youtube.com, or any other website we provide content for.<br>
-<a href="http://www.gigenet.com">Dedicated Servers</a> and <a href="http://www.gigenetcloud.com">Cloud Servers</a> by Gigenet.com - <br><br>
+<a href="http://www.gigenet.com">Dedicated Servers</a> and <a href="http://www.gigenetcloud.com">Cloud Servers</a> by Gigenet.com - 69.65.12.110<br><br>
 <a href="/site/contact">Contact Us</a> | <a href="/site/advertise">Advertise With Us</a> | <a href="/site/dmca">DMCA</a> | <a href="/site/privacy-policy">Privacy Policy</a> | <a href="/site/tos">Terms Of Service</a> | <a href="/site/about-us">About Us</a> | <a href="/sitemap.xml">Site Map</a>
 <div class="bottom">
-<!-- MadAdsMedia.com Asynchronous Ad Tag For FreeCodeSource.com -->
+<!--locked--><!-- MadAdsMedia.com Asynchronous Ad Tag For FreeCodeSource.com -->
 <!-- Size: Pop-under --
 <script src="http://ads-by.madadsmedia.com/tags/1/pop.js" type="text/javascript"></script>
 <!-- MadAdsMedia.com Asynchronous Ad Tag For FreeCodeSource.com -->  
@@ -483,7 +483,7 @@ EXd.write("<img src="+EXprot+"://nht-2.extreme-dm.com",
 "/n3.g?login=fcs&amp;url="+escape(document.URL)+"&amp;pv=&amp;",
 "jv="+EXjv+"&amp;j=y&amp;srw="+EXw+"&amp;srb="+EXb+"&amp;",
 "l="+escape(EXref)+" height=1 width=1>");//-->
-</script><img src="https://nht-2.extreme-dm.com/n3.g?login=fcs&amp;url=https%3A//web.archive.org/web/20130621044053id_/http%253A//freecodesource.com/site/privacy-policy&amp;pv=&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="nneXTReMe"><img height="1" width="1" alt=""
+</script><img src="https://nht-2.extreme-dm.com/n3.g?login=fcs&amp;url=https%3A//web.archive.org/web/20131220112350id_/http%253A//freecodesource.com/site/privacy-policy&amp;pv=&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="nneXTReMe"><img height="1" width="1" alt=""
 src="http://nht-2.extreme-dm.com/n3.g?login=fcs&amp;url=nojs&amp;j=n&amp;jv=n&amp;pv=" />
 </div></noscript>
 <!-- End eXTReMe Non Public Tracker Code -->
