--- a/w/wh/wha/whatprice.co.uk.html
+++ b/w/wh/wha/whatprice.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the whatprice.co.uk privacy policy that was archived on 2013-04-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130430054911id_/http%3A//www.whatprice.co.uk/data/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whatprice.co.uk privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220112408id_/http%3A//www.whatprice.co.uk/data/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <!-- database_blue -->
@@ -189,9 +189,10 @@ else
 
 	google_ad_client = "pub-5972539455096559";
 	/* 300x250, created 6/11/08 */
-	google_ad_slot = "9491500958";
-	google_ad_width = 300;
-	google_ad_height = 250;
+	google_ad_slot = "4854647003";
+	/*google_ad_slot = "9491500958";*/
+	google_ad_width = 336;
+	google_ad_height = 280;
 	writeJSgoogle();
 
 }
@@ -699,7 +700,7 @@ var winpops=window.open(popurl,"","width=400,height=800")
    }
    if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
    document.write ("'></scr"+"ipt>");
-//]]>--></script><script type="text/javascript" src="https://cas.criteo.com/delivery/ajs.php?zoneid=28384&amp;nodis=1&amp;cb=81543819650&amp;exclude=undefined&amp;charset=windows-1252&amp;loc=https%3A//web.archive.org/web/20130430054911id_/http%253A//www.whatprice.co.uk/data/privacy.html"></script>
+//]]>--></script><script type="text/javascript" src="https://cas.criteo.com/delivery/ajs.php?zoneid=28384&amp;nodis=1&amp;cb=10203736013&amp;exclude=undefined&amp;charset=windows-1252&amp;loc=https%3A//web.archive.org/web/20131220112408id_/http%253A//www.whatprice.co.uk/data/privacy.html"></script>
 
 <!-- AddThis Welcome BEGIN -->
 <script type="text/javascript" src="//s7.addthis.com/js/250/addthis_widget.js#pubid=ajwt2"></script>
