--- a/y/yu/yug/yugiohcardguide.com.html
+++ b/y/yu/yug/yugiohcardguide.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yugiohcardguide.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621041634id_/http%3A//www.yugiohcardguide.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yugiohcardguide.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220112551id_/http%3A//www.yugiohcardguide.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<title>YuGiOhCardGuide.com Privacy Statement</title>
@@ -7,10 +7,11 @@
 <!--[if lt IE 9]><script>var e = ("abbr,article,aside,audio,canvas,datalist,details,figure,footer,header,hgroup,mark,menu,meter,nav,output,progress,section,time,video").split(',');for (var i = 0; i < e.length; i++) {document.createElement(e[i]);}</script><![endif]-->
 <link rel="stylesheet" href="http://ycg.chakra42.net/css/ycg.css">
 <link rel="image_src" href="http://ycg.chakra42.net/images/YCG-Facebook.gif">
-<link rel="SHORTCUT ICON" href="http://www.yugiohcardguide.com/favicon.ico">
-<link rel="apple-touch-icon" href="http://ycg.chakra42.net/images/apple-touch-57x57.png">
-<link rel="apple-touch-icon" sizes="72x72" href="http://ycg.chakra42.net/images/apple-touch-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="http://ycg.chakra42.net/images/apple-touch-114x114.png">
+<link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="144x144" href="http://ycg.chakra42.net/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="114x114" href="http://ycg.chakra42.net/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="http://ycg.chakra42.net/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" href="http://ycg.chakra42.net/apple-touch-icon-57x57.png">
 <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=151953171570706"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <script src="http://ycg.chakra42.net/js/jquery.tablesorter.min.js"></script>
 	<!-- include virtual="/inc/ads_def_sky.htm" -->
@@ -185,9 +186,11 @@ If we decide to change our privacy policy, we will post those changes on our pri
 </tr></tbody></table>
     <br>
     <b>Visit my other sites:</b><br>
-    <a href="http://www.auntruthskitchen.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Aunt Ruths Kitchen']);" target="_blank" title="Great Family Recipes"><b>Aunt Ruth's Kitchen</b></a> | 
-    <a href="http://www.motivatedstyle.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Motives Style']);" target="_blank" title="Motives Cosmetics Blog"><b>Motives Style Blog</b></a> | 
-    <a href="http://www.ScoutSongs.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Scout Songs']);" target="_blank" title="Boy Scout, Girl Scout, and Patriotic Songs Lyrics"><b>Scout Songs</b></a>
+    <a href="http://www.auntruthskitchen.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Aunt Ruths Kitchen']);" target="_blank" title="Great Family Recipes"><b>Aunt Ruth's Kitchen</b></a> |
+    <a href="http://www.drinkliquidvitamins.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Isotonic Wellness']);" target="_blank" title="Isotonic Supplements"><b>Drink Your Vitamins</b></a> |
+    <a href="http://www.motivatedstyle.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Motives Style']);" target="_blank" title="Motives Cosmetics Blog"><b>Motives Style Blog</b></a> |
+    <a href="http://www.ScoutSongs.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Scout Songs']);" target="_blank" title="Boy Scout, Girl Scout, and Patriotic Songs Lyrics"><b>Scout Songs</b></a> |
+    <a href="http://www.ScoutSongs.com" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Chakra Sites', 'Silly Mortal']);" target="_blank" title="Silly Mortal Blog"><b>Silly Mortal</b></a>
     <br><br>
     This site is for entertainment purposes only. All information is believed to be accurate but is not guaranteed.<br>
     Please send <a href="/contact.html">feedback or corrections</a> here. See our <a href="/privacy.html">Privacy Statement</a> here.
@@ -199,14 +202,16 @@ If we decide to change our privacy policy, we will post those changes on our pri
 <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
 <script type="text/javascript">
 var shopComPromos = [
-    'Introducing <a rel="nofollow" href="http://www.savewithshopbuddy.com/" onClick="_gaq.push([\'_trackEvent\', \'Outbound Link\', \'MA Sites\', \'Shop Buddy\']);" target="_blank" title="Cash Back, Coupon Codes and Hot Deals"><b>SHOP BUDDY</b></a> - Earn <b>2%-50% cash back</b> plus never miss a <b>hot deal</b> or <b>coupon code</b> again when you shop at <b>thousands of stores you trust</b>.',
-    '<b>Cash back</b>, award winning <b>search</b>, <b>price alerts</b>, <b>eGifts</b>, <b>hot deals</b> and <b>coupon codes</b> from thousands of stores you trust @ <a rel="nofollow" href="http://www.shop-consultant.com/" onClick="_gaq.push([\'_trackEvent\', \'Outbound Link\', \'MA Sites\', \'SHOP.com Link\']);" target="_blank" title="Up to 50% CashBack"><b>SHOP.com</b>' 
+//    'Introducing <a rel="nofollow" href="http://www.savewithshopbuddy.com/" onClick="_gaq.push([\'_trackEvent\', \'Outbound Link\', \'MA Sites\', \'Shop Buddy\']);" target="_blank" title="Cash Back, Coupon Codes and Hot Deals"><b>SHOP BUDDY</b></a> - Earn <b>2%-50% cash back</b> plus never miss a <b>hot deal</b> or <b>coupon code</b> again when you shop at <b>thousands of stores you trust</b>.',
+//    '<b>Cash back</b>, award winning <b>search</b>, <b>price alerts</b>, <b>eGifts</b>, <b>hot deals</b> and <b>coupon codes</b> from thousands of stores you trust @ <a rel="nofollow" href="http://www.shop-consultant.com/" onClick="_gaq.push([\'_trackEvent\', \'Outbound Link\', \'MA Sites\', \'SHOP.com Link\']);" target="_blank" title="Up to 50% CashBack"><b>SHOP.com</b>',
+       '<b><a href="http://www.drinkliquidvitamins.com" onClick="_gaq.push([\'_trackEvent\', \'Outbound Link\', \'MA Sites\', \'Isotonic Wellness\']);" target="_blank">Drink Your Vitamins</a></b>: Isotonix, the world\'s most advanced nutraceuticals provide <b>rapid absorption</b>, and <b>superior delivery</b> with no binders or fillers.</a>'
     ];
-$(document).ready(function() {    
+$(document).ready(function() {
     $("#shopComMessage").append(shopComPromos[Math.floor(Math.random()*shopComPromos.length)]);
     // $("#shopCom").append('Get paid to shop at <a rel="nofollow" href="http://www.shop-consultant.com" onClick="_gaq.push([\'_trackEvent\', \'Outbound Link\', \'MA Sites\', \'SHOP.com\']);" target="_blank" title="Cash Back"><b>SHOP.com</b></a>');
 });
 </script>
+<!-- script src='http://Q1MediaHydraPlatform.com/ads/video/unit_desktop_slider.php?eid=12110'></script -->
 	</div>
 
 </body></html>
